--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,8 @@ html {
 	line-height: 30px;
 	
 	background-color: rgba(254, 254, 254, 0.6);
+	
+	font-size: 14px;
 }
 .access {
 background-color: rgba(218, 94, 94, 0.6);
