--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ html {
   color: white;
 }
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 500px) {
   .leaflet-popup-content {
     font-size: small;
     max-width: 200px;
