--- a/css/style.css
+++ b/css/style.css
@@ -156,4 +156,8 @@ html {
   .leaflet-control-layers-expanded {
     font-size: small;
   }
+  leaflet-marker-icon leaflet-zoom-animated leaflet-interactive {
+    width: 100px;
+    height: 100px;
+  }
 }
