--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ html, body, #map {
   color: white;
 }
 
-@media only screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
   .leaflet-popup-content {
     font-size: x-small;
     max-width: 150px;
